1 Added buttons 2 Fixed Bugs 3 Removed History record

--- a/styles/plugin.css
+++ b/styles/plugin.css
@@ -1,10 +1,37 @@
 .tools-container {
   position: absolute;
+  float: left;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  background: #fff;
 }
 
 .button {
-  
+  border: 0px;
+  background: #fff;
+  border-radius: 2px;
+  margin: 2px;
 }
+
+.button:hover {
+  background-color: #e1edf7;
+}
+
+.icon {
+  width: 22px;
+  height: 20px;
+}
+
+.icon-resize {
+  background: url("../icons/resize.png") 100% 100% no-repeat;
+  background-position: center;
+  background-size: 16px 16px;
+}
+
+.icon-uploadcare {
+  background: url("../icons/uploadcare.png") 100% 100% no-repeat;
+  background-position: center;
+} 
  
 .screen-overlay {
   position: absolute;
